2001-05-03  Ezra Peisach  <epeisach@rna.mit.edu>

	* sane_hostname.c (pty_make_sane_hostname): Preserve const
	property of incomming parameter in casts.

2001-05-03  Ezra Peisach  <epeisach@mit.edu>

	* cleanup.c (pty_cleanup): Delcare local variable only if
	VHANG_LAST defined.

	* logwtmp.c (pty_logwtmp): Only declare local variables if
	logwtmp() not available on system.

	* sane_hostname.c (sockaddrlen): Only define static function if
	HAVE_GETNAMEINFO defined. (pty_make_sane_hostname) Declare goto
	target only if code compiled in.

2001-05-01  Ken Raeburn  <raeburn@mit.edu>

	* update_utmp.c (pty_update_utmp): Fix typo (OWRONLY ->
	O_WRONLY).

2001-05-01  Ezra Peisach  <epeisach@mit.edu>

	* update_wtmp.c (ptyint_update_wtmpx): Add missing semi-colon in
 	code path if PTY_UTMP_E_EXIT and PTY_UTMPX_E_EXIT exist.

2001-04-30  Tom Yu  <tlyu@mit.edu>

	* configure.in: Fix some quoting of shell variables when passing
	to "test".  Reorder some logic in consistency checks to validate
	cache variables against "yes" to account for possible empty or
	nonexistent values.

	* pty-int.h: Fix conditional prototype of update_wtmp().

	* update_wtmp.c: Fix conditional compilation of update_wtmp() to
	cover the case where we have setutxent() but don't have updwtmpx()
	and WTMPX_FILE, as is the case on some Linux installations.

2001-04-27  Tom Yu  <tlyu@mit.edu>

	* configure.in(K5_CHECK_UT_MEMBER): Fix typo in previous; make
	sure to include the correct header when checking structure
	members.

	* configure.in: Many changes to support the rewriting of the utmp
	pieces of libpty.  Do a large amount of checking for consistency
	of various utmp and utmpx APIs as currently understood.  See rant
	in update_utmp.c.

	* dump-utmp.c: Rewrite; now has capability to use utmp{,x}name()
	to extract entries from utmp and utmpx files.  Adjusts field
	widths when printing as appropriate.

	* libpty.h: Update call signature for update_utmp() and logwtmp();
	make prototypes unconditional.
